test/resources/valid/ValidStringConstantDoubleQuotes.flo
string postsUrl = "/posts";

action GET_ALL_POSTS = network(url = postsUrl, method = 'GET');

flow POSTS = {
    array posts = [];
    GET_ALL_POSTS >> posts;
}